--- a/main.css
+++ b/main.css
@@ -45,19 +45,28 @@ body {
      text-align: center;
      font-size: 100px; 
     font-family: 'Indie Flower', cursive;
+    position:fixed;
+    bottom: -50px;
  } 
  
- 
+ h2 {
+     position: fixed;
+     top:10px;
+     left:10px;
+ }
 
  
  .red-jersey {
      width: 250px;
+     margin-left: -10px;
  }
  .black-skirt{
      width:225px;
+     margin-left: 10;
  }
  .black-shirt {
      width: 250px;
+     margin-left:-10px;
  }
  
  .black-pants{
@@ -66,4 +75,8 @@ body {
  
 .name{
     color: teal;
+}
+
+.red-hat {
+    margin-top:10px;
 }
