--- a/index.css
+++ b/index.css
@@ -1,34 +1,26 @@
-body { 
-   
-            font-family: 'Architects Daughter', Monospace;
-            background-image: url("http://www.vp69.navy.mil/images/1920x1080.jpg");
-            
-}
-    
-   .box{
-  margin-left: 450px;	
-    
-  
+body {
+    font-family: 'Architects Daughter', Monospace;
+    background-image: url("http://www.vp69.navy.mil/images/1920x1080.jpg");
 }
 
- .go{
-  margin-left: 600px;
- }
- 
- .title{
+.box {
+    margin-left: 450px;
+}
+
+.go {
+    margin-left: 600px;
+}
+
+.title {
     text-align: center;
     font-size: 260%;
     color: teal;
- }
+}
 
+.image {
+    float: left;
+}
 
- .heading{
-    text-align: center;
-    font-size: 160%;
-    color: white;
- }
-
-.image{
-      float:left
-   
+.heading{
+    text-align:center;
 }
